style(media): align media--right to alongside projectDetails

--- a/about.html
+++ b/about.html
@@ -20,19 +20,19 @@
 <!-- META: seo -->
 
 <title>Blockchain Product Design &amp; Development Studio</title>
-<meta name="description" content="">
-<meta name="keywords" content="">
+<meta name="description" content="We craft digital products built on web, mobile and blockchain.">
+<meta name="keywords" content="web, mobile, development, design, blockchain, marketing">
 <meta name="author" content="Peak Shift Inc.">
 <meta name="company" content="Peak Shift">
 <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
 <meta name="revisit-after" content="3 days">
 
-<meta property="og:url" content="" />
+<meta property="og:url" content="http://peakshift.com" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Blockchain Product Design &amp; Development Studio" />
 <meta property="og:image" content="" />
 <meta property="og:site_name" content="Peak Shift Ltd." />
-<meta property="og:description" content="" />
+<meta property="og:description" content="We craft digital products built on web, mobile and blockchain." />
 
 <meta name="twitter:card" content="photo" />
 <meta name="twitter:site" content="@peakshift" />
@@ -99,7 +99,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <a href="//facebook.com/peakshift">
               <img src="/assets/icons/facebook.svg" width="16" height="16">
             </a>
-            <a href="//dribbble.com/jb">
+            <a href="//dribbble.com/peakshift">
               <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
             </a>
           </p>
@@ -163,6 +163,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <img src="/assets/content/johns.jpg" alt="Johns Beharry">
         <div class="container">
           <h4><b>Johns Beharry</b></h4> 
+          <p> Earth</p>
           <p>Principal</p> 
         </div>
       </div>
@@ -171,6 +172,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <img src="/assets/content/Early.jpg" alt="Early Charlemagne">
         <div class="container">
           <h4><b>Early Charlemagne</b></h4> 
+          <p> Amsterdam</p>
           <p>Web Developer</p> 
         </div>
       </div>
@@ -179,7 +181,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <img src="/assets/content/Selimira.jpg" alt="Selimira Dimitrova">
         <div class="container">
           <h4><b>Selimira Dimitrova</b></h4> 
-          <p>Digital Marketing Strategist</p>
+          <p>London, UK</p>
+          <p>Marketing Specialist</p>
         </div> 
       </div>
 
@@ -187,6 +190,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <img src="/assets/content/Shazelle.png" alt="Shazelle Isaacs">
         <div class="container">
           <h4><b>Shazelle Isaacs</b></h4> 
+          <p> SVG</p>
           <p>Web Developer</p>
         </div>
       </div>
@@ -223,7 +227,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <span class="close2">x</span>
           <img src="/assets/content/Selimira.jpg"><br/>
           <b> Selimira Dimitrova </b>
-          <p> Digital Marketing Strategist </p>
+          <p> Marketing Specialist </p>
           <p> Selimira is part of the Peak Shift Inc. team and in charge of optimizing digital marketing efforts as well as web design. <br/>
           Born in Sofia, Bulgaria, Selimira is currently based in London. She's passionate about exploring as many places and cultures as possible. She enjoys photography and recently found out that she is fascinated by the underwater world, ​so scuba diving and snorkeling have become fun pastimes too.<br/>
           She has worked with Peak Shift Inc. since January 2015 on multiple projects from various industries. She is studying for a Bachelor of Arts in International Marketing with German at the University of Westminster in London with a focus on brand management, research, expansion strategy, and strategic marketing planning.</p>
@@ -237,7 +241,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <span class="close3">x</span>
           <img src="/assets/content/Shazelle.png"><br/>
           <b> Shazelle Isaacs </b>
-          <p> Junior Web Developer </p>
+          <p> Web Developer </p>
           <p> Shazelle is the newest member of the Peak Shift team. Hailing from the beautiful multi-island caribbean nation of St. Vincent &amp; the Grenadines, she is fluent in laughing and sarcasm. She enjoys brain teasers and problem solving which lends to her passion of programming.<br/>
           She graduated with a bachelor's degree in Computer Science and Management and is currently working on finding her niche in this vast technological world.
 
