--- a/journal.html
+++ b/journal.html
@@ -17,24 +17,24 @@
 
 <!-- META: seo -->
 
-<title>Thoughts: Peak Shift Ltd.</title>
+<title>Thoughts | Peak Shift Ltd.</title>
 <meta name="description" content="">
-<meta name="keywords" content="">
+<meta name="keywords" content="thoughts, articles, journal, development">
 <meta name="author" content="Peak Shift Inc.">
 <meta name="company" content="Peak Shift">
 <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
 <meta name="revisit-after" content="3 days">
 
-<meta property="og:url" content="" />
+<meta property="og:url" content="http://peakshift.com/journal.html" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Thoughts: Peak Shift Ltd." />
+<meta property="og:title" content="Thoughts | Peak Shift Ltd." />
 <meta property="og:image" content="" />
 <meta property="og:site_name" content="Peak Shift Ltd." />
 <meta property="og:description" content="" />
 
 <meta name="twitter:card" content="photo" />
 <meta name="twitter:site" content="@peakshift" />
-<meta name="twitter:title" content="Thoughts: Peak Shift Ltd.">
+<meta name="twitter:title" content="Thoughts | Peak Shift Ltd.">
 <meta name="twitter:image" content="">
 <meta name="twitter:image:width" content="1200" />
 <meta name="twitter:image:height" content="630" />
@@ -95,7 +95,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <a href="//facebook.com/peakshift">
                     <img src="/assets/icons/facebook.svg" width="16" height="16">
                   </a>
-                  <a href="//dribbble.com/jb">
+                  <a href="//dribbble.com/peakshift">
                     <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
                   </a>
                </p>
