--- a/lemariku.html
+++ b/lemariku.html
@@ -22,24 +22,24 @@
 
   <!-- META: seo -->
 
-  <title>Peak Shift Ltd.</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Lemariku | Peak Shift Ltd.</title>
+  <meta name="description" content="Lemariku is an online platform that makes shopping of second-hand fashion easy and comfortable for Indonesians.">
+  <meta name="keywords" content="online, shopping, indonesia, fashion">
   <meta name="author" content="Peak Shift Inc.">
   <meta name="company" content="Peak Shift">
   <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
   <meta name="revisit-after" content="3 days">
 
-  <meta property="og:url" content="" />
+  <meta property="og:url" content="http://peakshift.com/lemariku.html " />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Thoughts: Peak Shift Ltd." />
+  <meta property="og:title" content="Lemariku | Peak Shift Ltd." />
   <meta property="og:image" content="" />
   <meta property="og:site_name" content="Peak Shift Ltd." />
-  <meta property="og:description" content="" />
+  <meta property="og:description" content="Lemariku is an online platform that makes shopping of second-hand fashion easy and comfortable for Indonesians." />
 
   <meta name="twitter:card" content="photo" />
   <meta name="twitter:site" content="@peakshift" />
-  <meta name="twitter:title" content="Thoughts: Peak Shift Ltd.">
+  <meta name="twitter:title" content="Lemariku | Peak Shift Ltd.">
   <meta name="twitter:image" content="">
   <meta name="twitter:image:width" content="1200" />
   <meta name="twitter:image:height" content="630" />
@@ -101,7 +101,7 @@
             <a href="//facebook.com/peakshift">
               <img src="/assets/icons/facebook.svg" width="16" height="16">
             </a>
-            <a href="//dribbble.com/jb">
+            <a href="//dribbble.com/peakshift">
               <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
             </a>
           </p>
@@ -115,16 +115,20 @@
 
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
-      <div class="padded"><img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1"></div>
+      <div class="padded">
+        <img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1">
+      </div>
     </figure>
     <div class="contentArea padded clearfix">
       <h3 class="projectTitle">Lemariku</h3>
       <div class="projectDetails column">
+
         <p>What do they do: Lemariku is an online platform that makes shopping of second-hand fashion easy and comfortable for Indonesians.</p>
 
         <p>People can list items they want to sell on the platform, which is an online marketplace connecting buyers and sellers, allowing them to chat to each other and slect the ideal payment and delivery method for both parties.</p>
 
         <p>The platform is specifically created and catered to the purchase behaviour to the indonesian consumer allowing for cash payments and utilising local delivery services like GO-Jek.</p>
+
 
         <div class="column">
           <h4>The Problem</h4>
@@ -150,14 +154,23 @@
           <h4>Testimonials</h4>
           <blockquote>
             <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
-            <cite>&mdash; Nugent, Pam M.S.</cite>
+            <cite>Nugent, Pam M.S.</cite>
           </blockquote>
 
           <blockquote>
             <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
-            <cite>&mdash; Nugent, Pam M.S.</cite>
+            <cite>Nugent, Pam M.S.</cite>
           </blockquote>
         </div>
+        
+        <div class="section">
+          <figure class="media--right active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
+            <div class="padded">
+              <img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1">
+            </div>
+          </figure>
+        </div>
+        
       </div>        
       <ul class="projectMeta column">
         <li><a href="" target="_blank">Launch Project &rarr;</a></li>
