--- a/mindsky.html
+++ b/mindsky.html
@@ -23,23 +23,24 @@
   <!-- META: seo -->
 
   <title>Peak Shift Ltd.</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>MindSky | Peak Shift Ltd.</title>
+  <meta name="description" content=" MindSky is an online platform connecting current university students and graduates in Rwanda with employment opportunities.">
+  <meta name="keywords" content="rwanda, employment, graduates">
   <meta name="author" content="Peak Shift Inc.">
   <meta name="company" content="Peak Shift">
   <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
   <meta name="revisit-after" content="3 days">
 
-  <meta property="og:url" content="" />
+  <meta property="og:url" content="http://peakshift.com/mindsky.html "/>
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Thoughts: Peak Shift Ltd." />
+  <meta property="og:title" content="MindSky | Peak Shift Ltd." />
   <meta property="og:image" content="" />
   <meta property="og:site_name" content="Peak Shift Ltd." />
-  <meta property="og:description" content="" />
+  <meta property="og:description" content="MindSky is an online platform connecting current university students and graduates in Rwanda with employment opportunities." />
 
   <meta name="twitter:card" content="photo" />
   <meta name="twitter:site" content="@peakshift" />
-  <meta name="twitter:title" content="Thoughts: Peak Shift Ltd.">
+  <meta name="twitter:title" content="MindSky | Peak Shift Ltd.">
   <meta name="twitter:image" content="">
   <meta name="twitter:image:width" content="1200" />
   <meta name="twitter:image:height" content="630" />
@@ -103,7 +104,7 @@
             <a href="//facebook.com/peakshift">
               <img src="/assets/icons/facebook.svg" width="16" height="16">
             </a>
-            <a href="//dribbble.com/jb">
+            <a href="//dribbble.com/peakshift">
               <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
             </a>
           </p>
@@ -156,13 +157,13 @@
           <blockquote>
             <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal
               type of said stimulant</p>
-            <cite>&mdash; Nugent, Pam M.S.</cite>
+            <cite>Nugent, Pam M.S.</cite>
           </blockquote>
 
           <blockquote>
             <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal
               type of said stimulant</p>
-            <cite>&mdash; Nugent, Pam M.S.</cite>
+            <cite>Nugent, Pam M.S.</cite>
           </blockquote>
         </div>
       </div>
