style(lemariku): use a gradient to fade out the image

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
-      <a href="/lemariku"><div class="padded"><img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1"></div></a>
+      <div class="padded"><img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1"></div>
     </figure>
     <div class="contentArea padded clearfix">
       <h3 class="projectTitle">Branding &amp; UI for a pre-loved fashion marketplace</h3>
@@ -127,19 +127,13 @@
         <h4>Strategy &amp; Roadmap</h4>
         <p>Our collaboration with Lemariku started from the inception of the idea, and when they had only a hypothesis and rough idea for the application.</p>
 
-        <p>Working together, we came up with the following definition.</p>
+        <p>Together, we refined the definition of what the product was, and set the objectives to work towards. Since we use the Agile project management methodology we created a backlog and broke down the roadmap into a serise of sprints.</p>
 
-        <blockquote>
-          <p>Lemariku is an online marketplace connecting buyers and sellers, allowing them to chat to each other, negotiate prices, and select their ideal payment and delivery method for both parties.</p>
-        </blockquote>
-
-        <p>We worked closely with the founders to set objectives which helped us plan a product development roadmap for which we then broke down into a serise of agile sprints.</p>
-
-        <figure class="active media--stretched" style="background-image: url(/assets/content/lemariku/roadmap.svg); height: 300px;">
+        <figure class="active media--stretched gradient-fade" style="background-image: url(/assets/content/lemariku/roadmap.svg); height: 300px;">
         </figure>
 
         <h4>Branding</h4>
-        <p>The brand was specifically catered to the Indonesian market. The brand name Lemariku means “my closet”, which comes from ‘lemari’ meaning ‘closet’ and ‘ku’ meaning ‘my’ in Indonesian. 
+        <p>The brand was specifically catered to the Indonesian market. The brand name Lemariku means &#8220;my closet&#8221;, which comes from &#8220;lemari&#8221; meaning <em>closet</em> and &#8220;ku&#8221; meaning <em>my</em> in Indonesian. 
 
         <p>The logo was created to clearly visualise that it is a fashion application and add to the meaning of the name.</p>
         <figure class="active media--stretched" style="background-color: #FEF7F9; height: 520px;">
