feat(lemariku): add branding section [#30]

--- a/index.html
+++ b/index.html
@@ -122,10 +122,12 @@
       <div class="projectDetails column">
         <p>The Lemariku founders came to us with an idea to create an online marketplace that allows people in Indonesia to sell second hand fashion items.</p>
 
-        <p>In a saturated market, it was our first challenge to clearly communicated the OVP and differentiate Lemariku from the competition. We had to create a platform that is catered to the specific behaviours of the Indonesian target audience, such as allowing for cash payments and utilising local delivery services like GO-Jek. Additional to that was to design and develop an interface that is intuitive to use for them, as they find websites too complicated, and don't trust online payments.</p>
+        <p>In a saturated market, it was our first challenge to clearly communicated the OVP and differentiate Lemariku from the competition. We had to create a platform that is catered to the specific behaviours of the Indonesian target audience, such as allowing for cash payments and utilising local delivery services like GO-Jek.</p>
+
+        <p>Additional to that was to design and develop an interface that is intuitive to use for them, as they find websites too complicated, and don't trust online payments.</p>
 
         <h4>Strategy &amp; Roadmap</h4>
-        <p>Our collaboration with Lemariku started from the inception of the idea, and when they had only a hypothesis and rough idea for the application.</p>
+        <p>Our collaboration with Lemariku started from the inception of the idea, and when they had only a hypothesis and rough set of requirements.</p>
 
         <p>Together, we refined the definition of what the product was, and set the objectives to work towards. Since we use the Agile project management methodology we created a backlog and broke down the roadmap into a serise of sprints.</p>
 
@@ -136,7 +138,8 @@
         <p>The brand was specifically catered to the Indonesian market. The brand name Lemariku means &#8220;my closet&#8221;, which comes from &#8220;lemari&#8221; meaning <em>closet</em> and &#8220;ku&#8221; meaning <em>my</em> in Indonesian. 
 
         <p>The logo was created to clearly visualise that it is a fashion application and add to the meaning of the name.</p>
-        <figure class="active media--stretched" style="background-color: #FEF7F9; height: 520px;">
+        <figure class="active media--stretched">
+          <div class="padded"><img class="fill" src="/assets/content/lemariku/branding.svg?v=1"></div>
         </figure>
 
         <h4>User Interface &amp; Expereince</h4>
