feat(TEAM): push it live !

--- a/about.html
+++ b/about.html
@@ -154,39 +154,32 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>        
     </div>
     <figure class="active padded">
-      <h1> Meet the team </h1>
+      <h1>Meet the team</h1>
       <div id="first" class="card">
-        <img src="/assets/content/johns.jpg" alt="Johns Beharry">
+        <img src="/assets/content/team/Johns.p.jpg" alt="Johns Beharry">
         <div class="container">
-          <h4><b>Johns Beharry</b></h4> 
-          <p>Principal</p> 
-        </div>
-      </div>
-
-      <div id="second" class="card">
-        <img src="/assets/content/Early.jpg" alt="Early Charlemagne">
-        <div class="container">
-          <h4><b>Early Charlemagne</b></h4> 
-          <p>Web Developer</p> 
+          <h4><b>Johns Beharry</b></h4>
+          <p>Principal</p>
         </div>
       </div>
 
       <div id="third" class="card">
-        <img src="/assets/content/Selimira.jpg" alt="Selimira Dimitrova">
+        <img src="/assets/content/team/Selimira.p.jpg" alt="Selimira Dimitrova">
         <div class="container">
-          <h4><b>Selimira Dimitrova</b></h4> 
-          <p>Digital Marketing Strategist</p>
+          <h4><b>Selimira Dimitrova</b></h4>
+          <p>Marketing Strategist</p>
         </div> 
       </div>
 
       <div id="fourth" class="card">
-        <img src="/assets/content/Shazelle.png" alt="Shazelle Isaacs">
+        <img src="/assets/content/team/Shazelle.p.jpg" alt="Shazelle Isaacs">
         <div class="container">
-          <h4><b>Shazelle Isaacs</b></h4> 
+          <h4><b>Shazelle Isaacs</b></h4>
           <p>Web Developer</p>
         </div>
       </div>
     </figure>
+
     <!-----Modal images---------->    
       <div id="myModal" class="team-modal">
         <div>
