chore(SEO): update SEO tags on pages

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
 <meta name="revisit-after" content="3 days">
 
-<meta property="og:url" content="http://peakshift.com" />
+<meta property="og:url" content="http://www.peakshift.com/about" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Blockchain Product Design &amp; Development Studio" />
 <meta property="og:image" content="" />
