--- a/journal.html
+++ b/journal.html
@@ -25,7 +25,7 @@
 <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
 <meta name="revisit-after" content="3 days">
 
-<meta property="og:url" content="http://peakshift.com/journal.html" />
+<meta property="og:url" content="http://www.peakshift.com/journal" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Thoughts | Peak Shift Ltd." />
 <meta property="og:image" content="" />
