--- a/lemariku.html
+++ b/lemariku.html
@@ -30,7 +30,7 @@
   <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
   <meta name="revisit-after" content="3 days">
 
-  <meta property="og:url" content="http://peakshift.com/lemariku.html " />
+  <meta property="og:url" content="http://www.peakshift.com/lemariku" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Lemariku | Peak Shift Ltd." />
   <meta property="og:image" content="" />
