--- a/mindsky.html
+++ b/mindsky.html
@@ -30,7 +30,7 @@
   <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
   <meta name="revisit-after" content="3 days">
 
-  <meta property="og:url" content="http://peakshift.com/mindsky.html "/>
+  <meta property="og:url" content="http://www.peakshift.com/mindsky"/>
   <meta property="og:type" content="article" />
   <meta property="og:title" content="MindSky | Peak Shift Ltd." />
   <meta property="og:image" content="" />
