chore(media): update codebase

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
 
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
-      <div class="padded"><img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1"></div>
+      <div class="padded">
+        <img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1">
+      </div>
     </figure>
     <div class="contentArea padded clearfix">
       <h3 class="projectTitle">Branding &amp; UI for a pre-loved fashion marketplace</h3>
@@ -135,11 +137,14 @@
         </figure>
 
         <h4>Branding</h4>
-        <p>The brand was specifically catered to the Indonesian market. The brand name Lemariku means &#8220;my closet&#8221;, which comes from &#8220;lemari&#8221; meaning <em>closet</em> and &#8220;ku&#8221; meaning <em>my</em> in Indonesian. 
+        <p>The brand was specifically catered to the Indonesian market. The brand name Lemariku means &#8220;my closet&#8221;, which comes from &#8220;lemari&#8221; meaning <em>closet</em> and &#8220;ku&#8221; meaning <em>my</em> in Indonesian. </p>
 
         <p>The logo was created to clearly visualise that it is a fashion application and add to the meaning of the name.</p>
+        
         <figure class="active media--stretched">
-          <div class="padded"><img class="fill" src="/assets/content/lemariku/branding.svg?v=1"></div>
+          <div class="padded">
+            <img class="fill" src="/assets/content/lemariku/branding.svg?v=1">
+          </div>
         </figure>
 
         <h4>User Interface &amp; Expereince</h4>
@@ -147,8 +152,11 @@
         <p>Sellers mainly used Instagram to reach potential buyers to advertise their fashion items so we wanted to create an experience that was familliar, with while providing tools to address the challenges they had with current soltuions</p>
 
         <p>In order to encourage sellers to share their profiles, we wanted to provide some personalistion options so we allowed them to choose a colour from a pallete that would distinguish their profiles and items in search results.</p>
+
         <figure class="active media--stretched" style="background-color: #FEF7F9">
-          <div class="padded"><img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1"></div>
+          <div class="padded">
+            <img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1">
+          </div>
         </figure>
 
         <h4>Technology Stack</h4>
