chore(title): update about title to match the other pages

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 <!-- META: seo -->
 
-<title>Blockchain Product Design &amp; Development Studio</title>
+<title>About | Peak Shift Ltd.</title>
 <meta name="description" content="We craft digital products built on web, mobile and blockchain.">
 <meta name="keywords" content="web, mobile, development, design, blockchain, marketing">
 <meta name="author" content="Peak Shift Inc.">
