style(tags): add alt tags to page images and media--right style. Close #32

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div id="wrapper">
   <aside id="mainSide" class="column">
     <div class="padded">
-      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
+      <div id="logo"><a href="/"><img src="/assets/i/logo.svg" alt="Peak Shift logo"></a></div>
       <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; blockchain &mdash; <a href="/about">Meet The Team</a>.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
@@ -96,13 +96,13 @@
           </ul>
           <p class="typeface-colour-secondary rs small">
             <a href="//twitter.com/peakshift">
-              <img src="/assets/icons/twitter.svg" width="16" height="16">
+              <img src="/assets/icons/twitter.svg" width="16" height="16" alt="Twitter logo">
             </a>
             <a href="//facebook.com/peakshift">
-              <img src="/assets/icons/facebook.svg" width="16" height="16">
+              <img src="/assets/icons/facebook.svg" width="16" height="16" alt="Facebook logo">
             </a>
             <a href="//dribbble.com/peakshift">
-              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
+              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14" alt="Dribble logo">
             </a>
           </p>
         </div>
@@ -116,7 +116,7 @@
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
       <div class="padded">
-        <img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1">
+        <img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1" alt="Lemariku Project designs">
       </div>
     </figure>
     <div class="contentArea padded clearfix">
@@ -143,11 +143,11 @@
         
         <figure class="active media--stretched">
           <div class="padded">
-            <img class="fill" src="/assets/content/lemariku/branding.svg?v=1">
+            <img class="fill" src="/assets/content/lemariku/branding.svg?v=1" alt="Lemariku Branding Process">
           </div>
         </figure>
 
-        <h4>User Interface &amp; Expereince</h4>
+        <h4>User Interface &amp; Experience</h4>
 
         <p>Sellers mainly used Instagram to reach potential buyers to advertise their fashion items so we wanted to create an experience that was familliar, with while providing tools to address the challenges they had with current soltuions</p>
 
@@ -155,7 +155,7 @@
 
         <figure class="active media--stretched" style="background-color: #FEF7F9">
           <div class="padded">
-            <img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1">
+            <img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1" alt="Lemariku Interface Design">
           </div>
         </figure>
 
