--- a/lemariku.html
+++ b/lemariku.html
@@ -70,7 +70,7 @@
 <div id="wrapper">
   <aside id="mainSide" class="column">
     <div class="padded">
-      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
+      <div id="logo"><a href="/"><img src="/assets/i/logo.svg" alt="Peak Shift logo"></a></div>
       <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; blockchain &mdash; <a href="/about">Meet The Team</a>.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
@@ -96,13 +96,13 @@
           </ul>
           <p class="typeface-colour-secondary rs small">
             <a href="//twitter.com/peakshift">
-              <img src="/assets/icons/twitter.svg" width="16" height="16">
+              <img src="/assets/icons/twitter.svg" width="16" height="16" alt="Twitter logo">
             </a>
             <a href="//facebook.com/peakshift">
-              <img src="/assets/icons/facebook.svg" width="16" height="16">
+              <img src="/assets/icons/facebook.svg" width="16" height="16" alt="Facebook logo">
             </a>
             <a href="//dribbble.com/peakshift">
-              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
+              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14" alt="Dribble logo">
             </a>
           </p>
         </div>
@@ -117,7 +117,7 @@
     <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
       <a href="/lemariku">
         <div class="padded">
-          <img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1">
+          <img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1" alt="Lemariku Project Designs">
         </div>
       </a>
     </figure>
@@ -162,9 +162,9 @@
 
             <p>In order to encourage sellers to share their profiles, we wanted to provide some personalistion options so we allowed them to choose a colour from a pallete that would distinguish their profiles and items in search results.</p>
           </div>
-          <figure class="active media--right media--stretched" style="background-color: #FEF7F9">
+          <figure class="active media--stretched" style="background-color: #FEF7F9">
             <div class="padded">
-              <img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1">
+              <img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1" alt="Lemariku Interface Design">
             </div>
           </figure>
         </div>
