docs(index): update index

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
       <div class="padded">
-        <img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1" alt="Lemariku Project designs">
+        <img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1" alt="Lemariku Project Designs">
       </div>
     </figure>
     <div class="contentArea padded clearfix">
