chore(contact): update contact info from skype to telegram (#48)

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </ul>
           <ul class="heading-typeface">
             <li><span class="typeface-colour-white">›</span> PHONE: <a href="tel:+442032872811">+442032872811</a></li>
-            <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
+            <li><span class="typeface-colour-white">›</span> TELEGRAM: <a href="https://t.me/peakshift">peakshift</a></li>
             <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a></li>
           </ul>
           <p class="typeface-colour-secondary rs small">
