Revert "Merge branch '32-right-align-media' into 48-replace-skype"
This reverts commit 9408fd60053a151f7ff9614b4d1e888870acda91, reversing
changes made to 7805e1166da45cf706dc4d4f1e360a3612a40ef6.

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div id="wrapper">
   <aside id="mainSide" class="column">
     <div class="padded">  
-      <div id="logo"><a href="/"><img src="/assets/i/logo.svg" alt="Peak Shift logo"></a></div>
+      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
       <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; blockchain &mdash; <a href="/about">Meet The Team</a>.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
@@ -94,13 +94,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </ul>
           <p class="typeface-colour-secondary rs small">
             <a href="//twitter.com/peakshift">
-              <img src="/assets/icons/twitter.svg" width="16" height="16" alt="Twitter logo">
+              <img src="/assets/icons/twitter.svg" width="16" height="16">
             </a>
             <a href="//facebook.com/peakshift">
-              <img src="/assets/icons/facebook.svg" width="16" height="16" alt="Facebook logo">
+              <img src="/assets/icons/facebook.svg" width="16" height="16">
             </a>
             <a href="//dribbble.com/peakshift">
-              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14" alt="Dribble logo">
+              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
             </a>
           </p>
         </div>
