--- a/mindsky.html
+++ b/mindsky.html
@@ -71,7 +71,7 @@
 <div id="wrapper">
   <aside id="mainSide" class="column">
     <div class="padded">
-      <div id="logo"><a href="/"><img src="/assets/i/logo.svg" alt="Peak Shift logo"></a></div>
+      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
       <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; blockchain &mdash; <a href="/about">Meet The Team</a>.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
@@ -97,13 +97,13 @@
           </ul>
           <p class="typeface-colour-secondary rs small">
             <a href="//twitter.com/peakshift">
-              <img src="/assets/icons/twitter.svg" width="16" height="16" alt="Twitter logo">
+              <img src="/assets/icons/twitter.svg" width="16" height="16">
             </a>
             <a href="//facebook.com/peakshift">
-              <img src="/assets/icons/facebook.svg" width="16" height="16" alt="Facebook logo">
+              <img src="/assets/icons/facebook.svg" width="16" height="16">
             </a>
             <a href="//dribbble.com/peakshift">
-              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14" alt="Dribble logo">
+              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
             </a>
           </p>
         </div>
@@ -116,7 +116,7 @@
 
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/mindsky/header-bg-light.png'); background-color: #F6F6F6;">
-      <a href="/mindsky"><div class="padded"><img class="fill" src="/assets/content/mindsky/header-details-2.png?v=03" alt="MindSky Project Design"></div></a>
+      <a href="/mindsky"><div class="padded"><img class="fill" src="/assets/content/mindsky/header-details-2.png?v=03"></div></a>
     </figure>
     <div class="contentArea padded clearfix">
       <h3 class="projectTitle articleTitle">Building an Employment Platform for East Africa</h3>
@@ -142,7 +142,7 @@
         <p>Hiring managers log in, view, and sort applications as they come in then pass them onto employers.</p>
         <figure style="background-color: #FCFCFC;" class="media--stretched active">
           <div class="padded">
-            <img class="fill" src="/assets/content/mindsky/backoffice.png?v=03" alt="MindSky Backoffice Design">
+            <img class="fill" src="/assets/content/mindsky/backoffice.png?v=03">
           </div>
         </figure>
 
