--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div id="wrapper">
   <aside id="mainSide" class="column">
     <div class="padded">
-      <div id="logo"><a href="/"><img src="/assets/i/logo.svg" alt="Peak Shift logo"></a></div>
+      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
       <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; blockchain &mdash; <a href="/about">Meet The Team</a>.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
@@ -96,13 +96,13 @@
           </ul>
           <p class="typeface-colour-secondary rs small">
             <a href="//twitter.com/peakshift">
-              <img src="/assets/icons/twitter.svg" width="16" height="16" alt="Twitter logo">
+              <img src="/assets/icons/twitter.svg" width="16" height="16">
             </a>
             <a href="//facebook.com/peakshift">
-              <img src="/assets/icons/facebook.svg" width="16" height="16" alt="Facebook logo">
+              <img src="/assets/icons/facebook.svg" width="16" height="16">
             </a>
             <a href="//dribbble.com/peakshift">
-              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14" alt="Dribble logo">
+              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
             </a>
           </p>
         </div>
@@ -115,9 +115,7 @@
 
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
-      <div class="padded">
-        <img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1" alt="Lemariku Project Designs">
-      </div>
+      <div class="padded"><img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1"></div>
     </figure>
     <div class="contentArea padded clearfix">
       <h3 class="projectTitle">Branding &amp; UI for a pre-loved fashion marketplace</h3>
@@ -137,26 +135,20 @@
         </figure>
 
         <h4>Branding</h4>
-        <p>The brand was specifically catered to the Indonesian market. The brand name Lemariku means &#8220;my closet&#8221;, which comes from &#8220;lemari&#8221; meaning <em>closet</em> and &#8220;ku&#8221; meaning <em>my</em> in Indonesian. </p>
+        <p>The brand was specifically catered to the Indonesian market. The brand name Lemariku means &#8220;my closet&#8221;, which comes from &#8220;lemari&#8221; meaning <em>closet</em> and &#8220;ku&#8221; meaning <em>my</em> in Indonesian. 
 
         <p>The logo was created to clearly visualise that it is a fashion application and add to the meaning of the name.</p>
-        
         <figure class="active media--stretched">
-          <div class="padded">
-            <img class="fill" src="/assets/content/lemariku/branding.svg?v=1" alt="Lemariku Branding Process">
-          </div>
+          <div class="padded"><img class="fill" src="/assets/content/lemariku/branding.svg?v=1"></div>
         </figure>
 
-        <h4>User Interface &amp; Experience</h4>
+        <h4>User Interface &amp; Expereince</h4>
 
         <p>Sellers mainly used Instagram to reach potential buyers to advertise their fashion items so we wanted to create an experience that was familliar, with while providing tools to address the challenges they had with current soltuions</p>
 
         <p>In order to encourage sellers to share their profiles, we wanted to provide some personalistion options so we allowed them to choose a colour from a pallete that would distinguish their profiles and items in search results.</p>
-
         <figure class="active media--stretched" style="background-color: #FEF7F9">
-          <div class="padded">
-            <img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1" alt="Lemariku Interface Design">
-          </div>
+          <div class="padded"><img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1"></div>
         </figure>
 
         <h4>Technology Stack</h4>
