--- a/journal.html
+++ b/journal.html
@@ -65,7 +65,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div id="wrapper">
    <aside id="mainSide" class="column">
       <div class="padded">  
-         <div id="logo"><a href="/"><img src="/assets/i/logo.svg" alt="Peak Shift logo"></a></div>
+         <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
          <h2 id="portfolioLinks">
            We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a> &amp; blockchain.
            <br><br>Learn more <a href="/about">about us</a>.
@@ -93,13 +93,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                </ul>
                <p class="typeface-colour-secondary rs small">
                   <a href="//twitter.com/peakshift">
-                    <img src="/assets/icons/twitter.svg" width="16" height="16" alt="Twitter logo">
+                    <img src="/assets/icons/twitter.svg" width="16" height="16">
                   </a>
                   <a href="//facebook.com/peakshift">
-                    <img src="/assets/icons/facebook.svg" width="16" height="16" alt="Facebook logo">
+                    <img src="/assets/icons/facebook.svg" width="16" height="16">
                   </a>
                   <a href="//dribbble.com/peakshift">
-                    <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14" alt="Dribble logo">
+                    <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
                   </a>
                </p>
             </div>
@@ -116,7 +116,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                <p>MindSky is an online <a href="#">platform</a> connecting current university students and graduates in Rwanda with employment opportunities .</p>
 
                <figure class=" exdent active">
-                  <img class="fill" src="/assets/i/sketch.png" alt="Planning Sketch">
+                  <img class="fill" src="/assets/i/sketch.png">
                </figure>
 
                <p>Employers post their internships and job opportunities on the MindSky job board. MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document. Hiring managers log in, view, and sort applications as they come in.</p>
