docs(about): update story

--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </blockquote>
 
         <h3>Our Story</h3>
-        <p>Peak Shift is a small privately held studio focused on helping our clients bring their ideas to the market, from concept and research to design and development. Officially started in 2012, over the years we have worked on projects from Asia to Europe, North America, the Caribbean and Africa in Hospitality, Retail / Commerce, Education and Blockchain sectors.</p>
+        <p>From concept and research to design and development Peak Shift Ltd. is a small studio focused on developing technology that distributes power and opportunity. Officially started in 2012, over the years we have worked on client projects globally with our remote team. From Asia to Europe, North America, the Caribbean and East Africa.</p>
 
         <div class="column">
           <h3>Our Accomplishments</h3>
@@ -160,22 +160,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="container">
           <h4><b>Johns Beharry</b></h4>
           <p>Principal</p>
-        </div>
-      </div>
-
-      <div id="third" class="card">
-        <img src="/assets/content/team/Selimira.p.jpg" alt="Selimira Dimitrova">
-        <div class="container">
-          <h4><b>Selimira Dimitrova</b></h4>
-          <p>Marketing Strategist</p>
-        </div> 
-      </div>
-
-      <div id="fourth" class="card">
-        <img src="/assets/content/team/Shazelle.p.jpg" alt="Shazelle Isaacs">
-        <div class="container">
-          <h4><b>Shazelle Isaacs</b></h4>
-          <p>Web Developer</p>
         </div>
       </div>
     </figure>
