--- a/index.html
+++ b/index.html
@@ -1,41 +1,78 @@
+
 <!DOCTYPE html>
-<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
-<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
-<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
-<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--><html lang="en" class="no-js"><!--<![endif]-->
+<!--[if lt IE 7 ]>
+<html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>
+<html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>
+<html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>
+<html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!-->
+<html lang="en" class="no-js"><!--<![endif]-->
 <head>
-<meta charset="utf-8">
+  <meta charset="utf-8">
 
-<!--[if IE]><![endif]-->
+  <!--[if IE]><![endif]-->
 
-<meta http-equiv="Expires" CONTENT="Tue, 01 Jan 2013 00:00:01 GMT">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-<meta http-equiv="imagetoolbar" content="no">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Expires" CONTENT="Tue, 01 Jan 2013 00:00:01 GMT">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta http-equiv="imagetoolbar" content="no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
-<!-- META: seo -->
+  <!-- META: seo -->
 
-<title>Peak Shift Ltd.</title>
-<meta name="description" content="">
-<meta name="keywords" content="">
-<meta name="author" content="Peak Shift Inc.">
-<meta name="company" content="Peak Shift">
-<meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
-<meta name="revisit-after" content="3 days">
+  <title>Peak Shift Ltd.</title>
+  <meta name="description" content="We craft digital products built on web, mobile and blockchain.">
+  <meta name="keywords" content="web, mobile, development, design, blockchain, marketing">
+  <meta name="author" content="Peak Shift Inc.">
+  <meta name="company" content="Peak Shift">
+  <meta name="copyright" content="Copyright (c) 2020 Peak Shift Inc.">
+  <meta name="revisit-after" content="3 days">
 
-<!-- The Styles -->
-<link href="assets/css/master.css?v=0004" rel="stylesheet" type="text/css">
+  <meta property="og:url" content="http://www.peakshift.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Peak Shift Ltd." />
+  <meta property="og:image" content="" />
+  <meta property="og:site_name" content="Peak Shift Ltd." />
+  <meta property="og:description" content="We craft digital products built on web, mobile and blockchain." />
 
+  <meta name="twitter:card" content="photo" />
+  <meta name="twitter:site" content="@peakshift" />
+  <meta name="twitter:title" content="Peak Shift Ltd.">
+  <meta name="twitter:image" content="">
+  <meta name="twitter:image:width" content="1200" />
+  <meta name="twitter:image:height" content="630" />
+
+  <!-- The Styles -->
+  <link href="/assets/css/master.css?v=0004" rel="stylesheet" type="text/css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6502879-7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-6502879-7');
+  </script>
+  <!-- End Google Analytics -->
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TPS5PB');</script>
+  <!-- End Google Tag Manager -->
 </head>
 <body class="">
 
 <div id="wrapper">
   <aside id="mainSide" class="column">
-    <div class="padded">  
+    <div class="padded">
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks">We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a> &amp; blockchain.</h2>
+      <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; blockchain &mdash; <a href="/about">Meet The Team</a>.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
@@ -55,7 +92,8 @@
           <ul class="heading-typeface">
             <li><span class="typeface-colour-white">›</span> PHONE: <a href="tel:+442032872811">+442032872811</a></li>
             <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
-            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a></li>
+            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a>
+            </li>
           </ul>
           <p class="typeface-colour-secondary rs small">
             <a href="//twitter.com/peakshift">
@@ -64,16 +102,18 @@
             <a href="//facebook.com/peakshift">
               <img src="/assets/icons/facebook.svg" width="16" height="16">
             </a>
-            <a href="//dribbble.com/jb">
+            <a href="//dribbble.com/peakshift">
               <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
             </a>
           </p>
         </div>
-        <p class="typeface-colour-secondary rs small"><small><em>All Rights Reserved. Copyright &copy; Peak Shift Ltd. 2018</em></small></p>
+        <p class="typeface-colour-secondary rs small">
+          <small><em>All Rights Reserved. Copyright &copy; Peak Shift Ltd. 2012 - 2020</em></small>
+        </p>
       </div>
     </div>
   </aside>
-  
+
   <section id="mainContent" class="column">
     <figure style="background-image:url('/assets/content/mindsky-bg.png');" class="media--header active">
       <div class="padded">
@@ -89,7 +129,7 @@
 
         <figure style="background-image:url('/assets/content/mindsky-bg.png');" class="media--stretched active">
           <div class="padded">
-            <img class="fill" src="/assets/content/mindsky-top.png?v=03">
+            <img class="fill" src="/assets/content/mindsky-details.png?v=03">
           </div>
         </figure>
 
@@ -110,14 +150,120 @@
       <ul class="projectMeta column">
         <li><a href="https://www.mindsky.com/" target="_blank">Launch Project &rarr;</a></li>
         <li>AkilahNet LLC.</li>
-        <li>2016 - 2018</li>
+        <li>2016 - 18</li>
       </ul>
     </div>
   </section>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script src="/assets/js/history.js"></script>
-<script src="/assets/js/router.js"></script>
-<script src="/assets/js/scripts.js?v0001"></script>
+  <section id="mainContent" class="column">
+    <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
+      <div class="padded"><img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1"></div>
+    </figure>
+    <div class="contentArea padded clearfix">
+      <h3 class="projectTitle">Branding &amp; UI for a pre-loved fashion marketplace</h3>
+      <div class="projectDetails column">
+        <p>The Lemariku founders came to us with an idea to create an online marketplace that allows people in Indonesia to sell second hand fashion items.</p>
+
+        <p>In a saturated market, it was our first challenge to clearly communicated the OVP and differentiate Lemariku from the competition. We had to create a platform that is catered to the specific behaviours of the Indonesian target audience, such as allowing for cash payments and utilising local delivery services like GO-Jek.</p>
+
+        <p>Additional to that was to design and develop an interface that is intuitive to use for them, as they find websites too complicated, and don't trust online payments.</p>
+
+        <h4>Strategy &amp; Roadmap</h4>
+        <p>Our collaboration with Lemariku started from the inception of the idea, and when they had only a hypothesis and rough set of requirements.</p>
+
+        <p>Together, we refined the definition of what the product was, and set the objectives to work towards. Since we use the Agile project management methodology we created a backlog and broke down the roadmap into a serise of sprints.</p>
+
+        <figure class="active media--stretched gradient-fade" style="background-image: url(/assets/content/lemariku/roadmap.svg); height: 300px;">
+        </figure>
+
+        <h4>Branding</h4>
+        <p>The brand was specifically catered to the Indonesian market. The brand name Lemariku means &#8220;my closet&#8221;, which comes from &#8220;lemari&#8221; meaning <em>closet</em> and &#8220;ku&#8221; meaning <em>my</em> in Indonesian. 
+
+        <p>The logo was created to clearly visualise that it is a fashion application and add to the meaning of the name.</p>
+        <figure class="active media--stretched">
+          <div class="padded"><img class="fill" src="/assets/content/lemariku/branding.svg?v=1"></div>
+        </figure>
+
+        <h4>User Interface &amp; Expereince</h4>
+
+        <p>Sellers mainly used Instagram to reach potential buyers to advertise their fashion items so we wanted to create an experience that was familliar, with while providing tools to address the challenges they had with current soltuions</p>
+
+        <p>In order to encourage sellers to share their profiles, we wanted to provide some personalistion options so we allowed them to choose a colour from a pallete that would distinguish their profiles and items in search results.</p>
+        <figure class="active media--stretched" style="background-color: #FEF7F9">
+          <div class="padded"><img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1"></div>
+        </figure>
+
+        <h4>Technology Stack</h4>
+        <ul>
+          <li>Node.js</li>
+          <li>Web Sockets</li>
+          <li>Phone Gap (iOS and Android)</li>
+          <li>Backbone.js + Marionette</li>
+        </ul>   
+      </div>        
+      <ul class="projectMeta column">
+        <li>Lemariku</li>
+        <li>Jakarta, Indonesia</li>
+        <li>2015 - 16</li>
+      </ul>
+    </div>
+
+  </section>
+
+  <section id="mainContent" class="column">
+    <figure style="background-image:url('/assets/content/zed-bg.png');" class="media--header active">
+      <div class="padded">
+        <img class="fill" src="/assets/content/zed-top.png?v=03">
+      </div>
+    </figure>
+    <div class="contentArea padded clearfix">
+      <h3 class="projectTitle">ZED</h3>
+      <div class="projectDetails column">
+        <p>This client wanted an interface to help Money Transfer Operators (MTOs) manage their remitance processes around the world. They needed the ability to add and manage their bank accounts in each market they were located in for transfer acceptance and disbursements. the main users were MTO administrators, regnal managers, and tellers.</p>
+
+        <figure style="background-image:url('/assets/content/zed-bg.png');" class="media--stretched active">
+          <div class="padded">
+            <img class="fill" src="/assets/content/zed-design-system.png?v=03">
+          </div>
+        </figure>
+        
+        <p>We provided a design system they can use for all future products. The desktop client was built in Electron and React on the Stellar network. We started the design process by creating user flows based on user personas from our research. From here we were able to build out detailed mockups of each screen, get user feedback and make adjustments before moving on to a fully polished set of designs.</p>
+  
+        <figure style="background-image:url('/assets/content/zed-bg.png');" class="media--stretched active">
+          <div class="padded">
+            <img class="fill" src="/assets/content/zed-details.png?v=03">
+          </div>
+        </figure>
+
+        <p>Since this was a global remittance network, which money transfer operators would joined we had to make it accessible across platforms and needed to be light-weight especially considering emerging markets.</p>
+
+        <h4>Technologies Used</h4>
+        <ul>
+          <li>Stellar</li>
+          <li>Python</li>
+          <li>Flask</li>
+          <li>SQLAlchemy</li>
+          <li>Node.js</li>
+          <li>React.js</li>
+          <li>Electron</li>
+          <li>IdentityMind</li>
+        </ul>
+      </div>        
+      <ul class="projectMeta column">
+        <li><a href="https://www.zed.network/" target="_blank">Launch Project &rarr;</a></li>
+        <li>ZED</li>
+        <li>2018</li>
+      </ul>
+    </div>
+  </section>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="/assets/js/history.js"></script>
+  <script src="/assets/js/router.js"></script>
+  <script src="/assets/js/scripts.js?v0001"></script>
+  <!-- Google Tag Manager -->
+  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
+  height="0" width="0" style="display:none; visibility:hidden; "></iframe></noscript>
+  <!-- End Google Tag Manager -->
 </body>
 </html>
