chore(homepage): add new background color for images

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <div class="projectDetails column">
         <p>This client wanted an interface to help Money Transfer Operators (MTOs) manage their remitance processes around the world. They needed the ability to add and manage their bank accounts in each market they were located in for transfer acceptance and disbursements. the main users were MTO administrators, regnal managers, and tellers.</p>
 
-        <figure style="background-image:url('/assets/content/zed-bg.png');" class="media--stretched active">
+        <figure style="background-image:url('/assets/content/zed-bg-2.png');" class="media--stretched active">
           <div class="padded">
             <img class="fill" src="/assets/content/zed-design-system.png?v=03">
           </div>
@@ -229,7 +229,7 @@
         
         <p>We provided a design system they can use for all future products. The desktop client was built in Electron and React on the Stellar network. We started the design process by creating user flows based on user personas from our research. From here we were able to build out detailed mockups of each screen, get user feedback and make adjustments before moving on to a fully polished set of designs.</p>
   
-        <figure style="background-image:url('/assets/content/zed-bg.png');" class="media--stretched active">
+        <figure style="background-image:url('/assets/content/zed-bg-2.png');" class="media--stretched active">
           <div class="padded">
             <img class="fill" src="/assets/content/zed-details.png?v=03">
           </div>
