feat(index): add additional visuals for mindsky

--- a/index.html
+++ b/index.html
@@ -126,7 +126,12 @@
 
         <h4>1. Job Board &amp; Identity Platform</h4>
         <p>MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document.</p>
-        <figure style="background-color: #FCFCFC;" class="media--stretched active">
+        <figure style="background-color: #FCFCFC;margin-bottom: 0;" class="media--stretched active">
+          <div class="padded">
+            <img class="fill" src="/assets/content/mindsky-stats.png?v=03">
+          </div>
+        </figure>
+        <figure style="background-color: #FCFCFC;margin-top: 0;" class="media--stretched active">
           <div class="padded">
             <img class="fill" src="/assets/content/mindsky-jobseeker-filters.png?v=03">
           </div>
